[package]
name = "rust-socks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socksv5 = "0.3.0"
async-std = "1.12.0"
anyhow = "1.0.65"
env_logger = "0.9.1"
log = "0.4.17"
futures = "0.3.24"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"